--- a/TODO
+++ b/TODO
@@ -2,10 +2,8 @@ eric - figure out hands.py, program plays at every stage, print out decision rea
 
 
 pranav 
-    - at low numbers
+    - at low numbers set max to about min
     - pretty print tables
-    - big / small at beginning
     - explanations
-    - small blind bool val
-    - stack size as max_bet
+    - small blind bool val opposite?
 -
